tdf#74045 Make ImageMaps in slideshow clickable

Change-Id: I151983ce34a58c0f0d4b1e912f43525de4c0ad28